# image-contrast-enhancement-tool

./: CMakeLists.txt  README.md  contrast-enhancement.cpp  gpu.cu  gpu.h  hist-equ.h  histogram-equalization.cpp  in.pgm  main.cpp
common/inc/: helper_cuda.h
reference/: gpu_out_grayscale.pgm
scripts/: fail.sh  pass.sh  run.sh
